# c-compiler

./: .gitignore  AUTHORS  Doxyfile  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  build.sh  config.status  configure  configure.ac  error.c  error.h  main.c  main.h  scanner.h  utils.c  utils.h
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
cvm/: Makefile  cvm.h
examples/: Makefile  data  main1.c
src/: Makefile
src/compiler/: Makefile  Makefile.am  Makefile.bak  Makefile.in  c  data  error.c  error.h  main.c  main.h  out.data  parser.c  parser.h  preproc.data  preprocessor.c  preprocessor.h  scanner.c  scanner.h  semantic.c  semantic.h  stack.c  stack.h  symbol.c  symbol.h  test.c  tmp.txt  utils.c  utils.h
src/compiler/.deps/: main.Po  preprocessor.Po  scanner.Po  semantic.Po  symbol.Po
src/compiler/drivers/error/: make_err.c
src/compiler/drivers/parser/: get_token.c
src/compiler/drivers/preprocessor/: fseek_test  fseek_test.c  get_inc_fname  get_inc_fname.c  get_next_word  get_next_word.c  tmp.txt
src/compiler/drivers/scanner/: extract_token  extract_token.c  get_lexeme  get_lexeme.c  get_token  get_token.c  is_valid_id  is_valid_id.c  return_string  return_string.c  write_token.c
src/compiler/drivers/symbol/: is_keyword.c
src/compiler/drivers/utils/: bsearch  bsearch.c  fcpeek  fcpeek.c  get_column  get_column.c  get_files_from_argv  get_files_from_argv.c  get_filesize  get_filesize.c  getword  getword.c  scan_for_o.c  strip_whitesp  strip_whitesp.c  tmp.txt
src/cvm/: cvm  (+5 more)
tmp/: module_flow_chart.dia  (+1 more)
(+104 files in other folders)
