AC_INIT(src/compiler/main.c)


PACKAGE=compiler
VERSION=0.0.1

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AC_HEADER_STDC

AC_CHECK_HEADER(stdio.h)
AC_CHECK_HEADER(stdlib.h)
AC_CHECK_HEADER(malloc.h)
AC_CHECK_HEADER(strings.h)
AC_CHECK_HEADER(time.h)

AC_PROG_CC

AC_LANG(C)

AC_OUTPUT(Makefile src/compiler/Makefile src/cvm/Makefile)


