# C Compiler Makefile Template
# By Eudis Duran

.SILENT:

bin_PROGRAMS = c

AC_CFLAGS = -O2 -Wall -g

c_LDADD = -lm


c_SOURCES = main.c main.h error.c error.h preprocessor.c preprocessor.h \
            scanner.h scanner.c symbol.h symbol.c utils.h utils.c \
            parser.h parser.c semantic.c semantic.h




